[gd_scene format=3 uid="uid://b76k56lpsvxnd"]

[ext_resource type="Script" uid="uid://m5b67ko2lnar" path="res://ui/printable_entry_line.gd" id="1_cqusc"]
[ext_resource type="Texture2D" uid="uid://krwk3db78ldi" path="res://ui/assets/Folder.svg" id="1_d8fem"]
[ext_resource type="Texture2D" uid="uid://ku8ydk8bce1i" path="res://ui/assets/ExternalLink.svg" id="2_cqusc"]

[node name="PrintableEntryLine" type="HBoxContainer" unique_id=1453251548]
script = ExtResource("1_cqusc")

[node name="Folderbutton" type="Button" parent="." unique_id=679772482]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("1_d8fem")

[node name="ExternalButton" type="Button" parent="." unique_id=1467444683]
layout_mode = 2
mouse_default_cursor_shape = 2
icon = ExtResource("2_cqusc")

[node name="NameButton" type="Button" parent="." unique_id=1962776104]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_default_cursor_shape = 2
flat = true
alignment = 0

[connection signal="pressed" from="Folderbutton" to="." method="_on_folderbutton_pressed"]
[connection signal="pressed" from="ExternalButton" to="." method="_on_external_button_pressed"]
[connection signal="pressed" from="NameButton" to="." method="_on_name_button_pressed"]
